--- a/src/style/pages/LoginForm.scss
+++ b/src/style/pages/LoginForm.scss
@@ -1,6 +1,8 @@
 $font-app: Roboto, Arial, sans-serif;
 
 .flexbox {
+  justify-content: center;
+  display: flex;
   padding: 32px 0;
   background-color: #235d9f;
   .container {
@@ -36,7 +38,6 @@ $font-app: Roboto, Arial, sans-serif;
         .login-form {
           box-sizing: inherit;
           i {
-            
             position: absolute;
             color: #235d9f;
           }
@@ -64,7 +65,7 @@ $font-app: Roboto, Arial, sans-serif;
               border-color: #8c9fba;
             }
           }
-          
+
           .icon {
             padding: 10px;
             min-width: 40px;
